	and API can be kept more stable over the coming releases.

	Simulation time:
	- simtime_t is now not double but class SimTime (64-bit fixed point number)
	- simtime exponent is base 10, and set globally
	- there is no implicit conversion from SimTime to double. However,
	  to alleviate this pain, at many places overloaded functions have
	  been added that take simtime_t.
	- simtimeToStr(), strToSimtime() is no longer (use SimTime methods
	  instead, or the compatibility macros described below!)

	Simtime compatibility mode:
	- if needed, the simkernel can be compiled with simtime_t = double.
	  For that, compile everything with USE_DOUBLE_SIMTIME defined
	  (add -DUSE_DOUBLE_SIMTIME to CFLAGS). If you want to ensure that
	  models compile with both int64-based and double simtime_t, use
	  the following macros to convert simtime_t from/to double and string:
	  SIMTIME_STR(t), SIMTIME_DBL(t), STR_SIMTIME(s), SIMTIME_TTOA(buf,t).
	  MAXTIME is also defined correctly for both simtime types.

	Converting source code to the new int64-based simtime_t:
	- for the large part, code is supposed to compile without much change
	- most errors come from using "double" variables which should really be
	  "simtime_t". E.g. if you see variables like double timeout, double
	  interval, double age, etc, they should all be changed to simtime_t.
	  This applies to message fields within .msg files as well: some of
	  the "double" ones may need to be changed to "simtime_t".
	- when conversion to double is still needed, use SIMTIME_DBL(t) or t.dbl().
	- ev << simtimeToStr(t) is to be changed to: ev << t;

	Gate handling:
	- introduced inout gates, which resulted in some changes listed below
	- with inout gates, gate("gatename") does not work, use gate("gatename$i")
	  or gate("gatename$o") instead
	- if a gate vector is zero size, there's no cGate object for it at all.
	  But hasGate(), gateType(), isGateVector(), gateSize() do work.